cabal-version:      3.4
name:               modelyz-ident
version:            0.1.0.0
synopsis: Modelyz microservice for the identification needs

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: AGPL-3.0-or-later
author:             Christophe Combelles
maintainer:         ccomb@free.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/Modelyz/ident

executable ident
    main-is:          Main.hs
    other-modules:
        Message
        MessageStore 
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options: -Wall
    build-depends:
        base ^>= 4.16.0.0
        , aeson ^>= 2.1
        , bytestring
        , containers
        , http-types
        , mtl
        , optparse-applicative
        , scientific
        , text
        , time
        , unordered-containers
        , uuid
        , vector
        , wai
        , wai-websockets
        , warp
        , websockets

    hs-source-dirs:   src
    default-language: Haskell2010
