cabal-version:      3.4
name:               modelyz-ident
version:            0.1.0.0
synopsis: Modelyz microservice for the identification needs
-- description:
-- bug-reports:
license: AGPL-3.0-or-later
license-file:        LICENSE
author:             Christophe Combelles
maintainer:         ccomb@free.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/Modelyz/ident

executable ident
    main-is:          Main.hs
    hs-source-dirs:   src
    ghc-options: -Wall -O2
    build-depends:
        base ^>= 4.16.0.0
        , aeson ^>= 2.1
        , bytestring
        , containers
        , http-types
        , modelyz-message
        , mtl
        , optparse-applicative
        , scientific
        , text
        , time
        , unordered-containers
        , uuid
        , vector
        , wai
        , wai-websockets
        , warp
        , websockets

    default-language: GHC2021
